refactor!: unified agent API, mobile UI overhaul, streaming fixes, and component standardization
BREAKING CHANGE: Removed /thread/{thread_id}/agent/start and /agent/initiate

Backend:
- New unified POST /agent/start (new/existing threads, universal file upload)
- Extracted helpers (~600 lines removed), updated frontend/mobile clients

Mobile:
- Unified Avatar/SelectableListItem/EntityList components (16px border radius standard)
- Advanced features flag (Chats/Workers/Triggers toggle, AsyncStorage persistence)
- Agent drawer redesign (blur backdrop, worker/model submenus, Figma specs, light mode fixes)
- Fixed streaming (no chunk skipping/flicker, optimistic loading, 50-100ms delays, smart deduplication)
- Loading improvements (spinner replaces skeleton, optimistic rendering for new chats)
- Message renderer updates (16px font, 24px line height, proper dark/light colors, 16px padding)
- Agent identifier refinement (16px size, tighter spacing, 50% opacity)
- Standardized rounded-2xl across 25+ components (bubbles, cards, inputs, buttons)
- Deleted unused: ThreadIcon, ListItem, ItemList, models.ts
- Bug fixes: triggerType undefined, getCurrentAgent, hideIndicator prop, run ID tracking

Migration: Use /agent/start for all operations

--- a/apps/mobile/locales/de.json
+++ b/apps/mobile/locales/de.json
@@ -64,6 +64,7 @@
     "integrations": "Integrationen",
     "theme": "Theme & Icon",
     "language": "Sprache",
+    "advancedFeatures": "Erweiterte Funktionen",
     "signOut": "Abmelden",
     "upgrade": "Zu Pro upgraden",
     "unlockFeatures": "Alle Features freischalten"
