--- a/apps/mobile/locales/en.json
+++ b/apps/mobile/locales/en.json
@@ -113,6 +113,7 @@
     "darkMode": "Dark Mode",
     "currentTheme": "Current Theme",
     "language": "Language",
+    "advancedFeatures": "Advanced Features",
     "signOut": "Sign out",
     "upgrade": "Upgrade to Pro",
     "unlockFeatures": "Unlock all features"
