--- a/apps/mobile/locales/es.json
+++ b/apps/mobile/locales/es.json
@@ -64,6 +64,7 @@
     "integrations": "Integraciones",
     "theme": "Theme e Icono",
     "language": "Idioma",
+    "advancedFeatures": "Funciones avanzadas",
     "signOut": "Cerrar sesión",
     "upgrade": "Actualizar a Pro",
     "unlockFeatures": "Desbloquear todas las funciones"
