--- a/apps/mobile/locales/fr.json
+++ b/apps/mobile/locales/fr.json
@@ -64,6 +64,7 @@
     "integrations": "Intégrations",
     "theme": "Thème & Icône",
     "language": "Langue",
+    "advancedFeatures": "Fonctionnalités avancées",
     "signOut": "Déconnexion",
     "upgrade": "Passer à Pro",
     "unlockFeatures": "Débloquer toutes les fonctionnalités"
