--- a/apps/mobile/locales/it.json
+++ b/apps/mobile/locales/it.json
@@ -64,6 +64,7 @@
     "integrations": "Integrazioni",
     "theme": "Tema & Icona",
     "language": "Lingua",
+    "advancedFeatures": "Funzionalità avanzate",
     "signOut": "Esci",
     "upgrade": "Passa a Pro",
     "unlockFeatures": "Sblocca tutte le funzionalità"
