--- a/apps/mobile/locales/ja.json
+++ b/apps/mobile/locales/ja.json
@@ -64,6 +64,7 @@
     "integrations": "連携",
     "theme": "テーマとアイコン",
     "language": "言語",
+    "advancedFeatures": "高度な機能",
     "signOut": "ログアウト",
     "upgrade": "Proにアップグレード",
     "unlockFeatures": "全機能をアンロック"
