--- a/apps/mobile/locales/pt.json
+++ b/apps/mobile/locales/pt.json
@@ -64,6 +64,7 @@
     "integrations": "Integrações",
     "theme": "Tema & Ícone",
     "language": "Idioma",
+    "advancedFeatures": "Recursos avançados",
     "signOut": "Sair",
     "upgrade": "Fazer upgrade para Pro",
     "unlockFeatures": "Desbloquear todos os recursos"
