--- a/apps/mobile/locales/zh.json
+++ b/apps/mobile/locales/zh.json
@@ -64,6 +64,7 @@
     "integrations": "集成",
     "theme": "主题和图标",
     "language": "语言",
+    "advancedFeatures": "高级功能",
     "signOut": "退出登录",
     "upgrade": "升级到 Pro",
     "unlockFeatures": "解锁全部功能"
