display quickaction bar

--- a/apps/mobile/locales/en.json
+++ b/apps/mobile/locales/en.json
@@ -155,6 +155,7 @@
   "chat": {
     "newChat": "New Chat",
     "placeholder": "Give Kortix a task...",
+    "inputPlaceholder": "Ask Kortix to do anything...",
     "recording": "Recording...",
     "cancelRecording": "Cancel recording",
     "stopRecording": "Stop recording",
@@ -195,6 +196,9 @@
     "docs": "Docs",
     "people": "People",
     "research": "Research",
+    "summarizePlaceholder": "What would you like to summarize?",
+    "translatePlaceholder": "What would you like to translate?",
+    "explainPlaceholder": "What would you like explained?",
     "chooseStyle": "Choose {{action}} style",
     "imageStyles": {
       "abstract": "Abstract",
@@ -317,6 +321,15 @@
     "failedToOpenFilePicker": "Couldn't open file picker. Try again.",
     "fileTooLarge": "File size exceeds the maximum allowed size.",
     "uploadFailed": "Failed to upload files. Please try again."
+  },
+  "permissions": {
+    "cameraTitle": "Camera Permission Required",
+    "cameraMessage": "Please enable camera access in your settings to take photos.",
+    "galleryTitle": "Photo Library Permission Required",
+    "galleryMessage": "Please enable photo library access in your settings to choose images."
+  },
+  "audio": {
+    "transcriptionFailed": "Failed to transcribe audio. Please try again."
   },
   "models": {
     "selectModel": "Select Model",
